--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hillsong Church - Clone Website</title>
   </head>
-  <body>
-    <h1>
-      Hello From Hillsong!
-    </h1>
+  <body  class="home">
+    <header>
+      <ul>
+        <li><a href="/"><img src="./images/logo.png"></a></li>
+      </ul>
+    </header>
   </body>
 </html>
