--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body  class="home">
     <header>
-      <ul>
+      <div id="globalNav" class="sticky-nav">
+        <ul>
         <li><a href="/"><img src="./images/logo.png"></a></li>
       </ul>
+      </div>
+      
     </header>
   </body>
 </html>
