--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hillsong Church - Clone Website</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body  class="home">
-    <header>
-      <div id="globalNav" class="sticky-nav">
+    <header id="globalNav">
+      <div class="sticky-nav">
         <ul>
         <li><a href="/"><img src="./images/logo.png"></a></li>
       </ul>
