--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body  class="home">
     <header id="globalNav">
       <div class="sticky-nav">
-        <ul>
-        <li><a href="/"><img src="./images/logo.png"></a></li>
-      </ul>
+        <div class="global-nav-bar">
+            <ul>
+              <li><a href="/"><img src="./images/logo.png"></a></li>
+            </ul>
+        </div>
       </div>
       
     </header>
